<resources>
    <string name="app_name">Poacher Notify</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="zone">Zone :</string>
    <string name="reload">Reload</string>
    <string name="status">Status :</string>
    <string name="ip">IP :</string>
</resources>
